# raglab

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260716_0001_ingestion_schema.py  20260716_0002_ingestion_jobs.py  20260717_0003_ingestion_job_leases.py  20260717_0004_pagination_indexes.py  README.md
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  errors.py  main.py  runtime.py  security.py
apps/web/: .env.example  DESIGN_SYSTEM.md  package-lock.json  package.json  vitest.config.ts
configs/indexing_experiments/: v1.json
datasets/evaluation/: chunking_benchmark_v1.jsonl  indexing_experiment_v1.jsonl
docs/: api.md  chunking.md  evaluation-methodology.md  framework-comparison.md  frontend.md  generation.md  indexing-experiments.md  observability.md  retrieval.md
docs/adr/: 0001-shared-canonical-retrieval-for-framework-adapters.md  0002-bounded-langgraph-citation-repair.md  0003-map-canonical-retrieval-to-llamaindex-nodes.md  0004-use-haystack-async-components-over-shared-retrieval.md  0005-postgresql-leases-for-ingestion-workers.md  0006-scoped-keyset-pagination.md  0007-retryable-cross-store-document-deletion.md  0008-local-api-keys-and-role-permissions.md  0009-isolate-framework-native-indexing-experiments.md  0010-process-local-bounded-observability.md
reports/baselines/: custom-hybrid-reranked-llama3.2-v1.md  custom-vs-langchain-llama3.2-v1.md  custom-vs-langchain-vs-langgraph-llama3.2-v1.md  custom-vs-langchain-vs-langgraph-vs-llamaindex-llama3.2-v1.md  custom-vs-langchain-vs-langgraph-vs-llamaindex-vs-haystack-llama3.2-v1.md  native-indexing-deterministic-v1.md
scripts/: benchmark_chunking.py  benchmark_native_indexing.py  build_evaluation_dataset.py  compare_frameworks.py  run_evaluation.py  seed_evaluation.py  smoke_api.py  smoke_ollama.py
src/raglab/: __init__.py
tests/api/: test_health.py  (+2 more)
(+158 files in other folders)
