[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "raglab"
version = "0.1.0"
description = "Multi-framework retrieval-augmented generation platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "RAGLab contributors" }]
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "langchain>=1.2,<2.0",
  "langchain-ollama>=1.0,<2.0",
  "langchain-text-splitters>=1.0,<2.0",
  "pydantic-settings>=2.7,<3.0",
  "pymupdf>=1.25,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "qdrant-client>=1.13,<2.0",
  "redis>=5.2,<7.0",
  "sentence-transformers>=3.4,<6.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["raglab*", "apps*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["raglab", "apps"]
mypy_path = ["src", "."]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra -m 'not integration and not live_model'"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires Docker-backed PostgreSQL, Qdrant, and Redis services",
  "live_model: downloads or loads a real embedding model",
]

[tool.coverage.run]
branch = true
source = ["raglab", "apps"]
